css/style.css
* { box-sizing: border-box; }

/* variables */
:root {
    --white-color: #FFFFFF;
    --white-color-transparent-100: #FFFFFF33;
    --black-color: #000000;
    --black-color-transparent-100: #00000066;
    --black-color-transparent-200:#00000040;
    --gray-color-400: #D1D1D1;
    --gray-color-300: #B2B2B2;
    --gray-color-200: #28272C;
    --gray-color-100: #6A6A6A;
    --secondary-color: #FF0000;
    --secondary-color-transparent-100: #FF00004D;
    --primary-font: "Nunito Sans";
    --secondary-font: "Open Sans";
}
/* e: variables */

body { font-family: var(--primary-font), sans-serif; font-size: 16px;}

/* container */
.container {
    width: 1088px;
    margin: 0 auto;
}
/* e: container */

/* top-section */

/* TODO!!! Add background, add hover and border, fix positioning */
.top-section {
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-height: 88px;
    background: var(--black-color); /* TODO */
}
.top-section__logo {
    display: flex;
    align-items: center;
    gap: 10px;
    color: var(--white-color);
    text-transform: uppercase;
    font-weight: bold;
    font-size: 2.1875em;
}
.top-section__logo span { color: var(--secondary-color);}

.top-section__nav-list {
    display: flex;
    gap: 57px;
}
.top-section__nav-item a {
    color: var(--white-color);
    text-transform: uppercase;
    font-weight: bold;
    font-size: 1em;
    text-decoration: none;
}

/* e: top-section */

/* header */
/* TODO!!! add overlay and icon */

.header {
    background-image: url(../images/image.png);
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 850px; /* TODO */
    margin-top: -110px;
    padding-top: 250px;
    text-align: center;
}
.header__title {
    color: var(--white-color);
    font: normal normal 900 5.625em var(--primary-font);
    text-transform: uppercase;
    letter-spacing: 0;
    text-shadow: 0 3px 6px var(--black-color-transparent-100);
}
.header__subtitle {
    color: var(--white-color);
    font: normal normal bold 1em var(--primary-font);
}

.btn-container { margin-top: 3.375em; }

/* e: header */

/* buttons */

.btn {
    border-radius: 30px;
    text-transform: uppercase;
    text-decoration: none;
    display: inline-block;
    font-weight: bold;
    margin-right: 1.5625em;
}
.btn-primary {
    background-color: var(--secondary-color);
    color: var(--white-color);
}

.btn-secondary {
    background-color: var(--white-color);
    color: var(--secondary-color);
}

.btn-large { padding: 1.375em 3.4375em; }
.btn-small { padding: 0.6875em 1.875em; }
/* e: buttons */

/* blog */

    .section {
        display: flex;
        flex-direction: column;
        align-items: center;
        padding-top: 60px;
        padding-bottom: 60px;
    }
    .section__columns {
        display: flex;
    }
    .section__title {
        font: normal normal bold 2.1875em var(--primary-font);
        letter-spacing: 0;
        color: var(--black-color);
        text-transform: uppercase;
        margin-bottom: 2.1875rem;
    }
    .section__column--title {
        font: normal normal normal 1.1875em var(--primary-font);
        letter-spacing: 0;
        color: var(--gray-color-100);
        margin-top: 25px;
        margin-bottom: 15px;

    }
    .section__column--subtitle {
        font: normal normal 300 0.875em var(--secondary-font);
        letter-spacing: 0;
        color: var(--gray-color-100);
        margin-right: 92px;
        margin-bottom: 15px;
    }
/* e: blog */

/* service */
    #service {
        background-color: var(--gray-color-200);
        text-align: center;
    }

    #service .section__title {
        color: var(--white-color);
    }
    #service .section__column--title {
        color: var(--white-color);
    }
    #service .section__column--subtitle {
        color: var(--gray-color-300);
        margin-right: 0;
    }
/* e: service */

